# jakpsatsql-devops

./: .gitignore  .replit  .worktree-setup.sh  CLAUDE.md  CzechitasProvisioner.applescript  Makefile  README.md  SPUSTENI.txt  build-app.sh  build.sh  cleanup.py  explore.py  init_db.py  logins-old.sql  logins-uk.sql  logins.sql  provision.py  provision_gui.py  provisioner_key.p8  pyproject.toml  pytest.ini  replit.nix  run.bat  run.command  setup_snowflake.sql  ucastnice_vzor.tsv
.github/workflows/: release.yml
docs/: PLAN.md
tests/: conftest.py  test_applescript.py  test_binary.py  test_gui.py  test_integration.py  test_phase1_setup.py  test_unit.py  test_wrappers.py
tests/fixtures/: bad_columns.tsv  bad_login.tsv  duplicate_login.tsv  valid_studentka.tsv  valid_test.tsv
