[project]
name = "jakpsatsql-devops"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "snowflake-connector-python",
    "cryptography",
    "rich",
    "pyinstaller",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
